Fix dark mode toggle

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,13 +1,6 @@
 :root {
-  --background: rgb(254, 248, 232);;
+  --background: rgb(254, 248, 232);
   --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
 }
 
 html,
@@ -30,10 +23,4 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
